lnd: remove debug htlc
